# Sea5kgStoneGenerator_editorplugin

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  Sea5kgStoneGenerator_editorplugin.upackagepreset  Sea5kgStoneGenerator_linux_double.project  Sea5kgStoneGenerator_linux_float.project  Sea5kgStoneGenerator_windows_double.project  Sea5kgStoneGenerator_windows_float.project  TODO.md  build_plugin.py  launch_editor.bat  launch_editor.sh  launch_editor_double.bat  launch_editor_double.sh  launch_editor_float.bat  launch_editor_float.sh  pack_plugin.py  pm.py  run_editor.sh  unigine-editor-prototype-stone-generator.project  version
UnigineEditorPlugin_PrototypeStoneGenerator/: CMakeLists.txt  UnigineEditorPlugin_PrototypeStoneGenerator.json.in
UnigineEditorPlugin_PrototypeStoneGenerator/cmake/: FindEditor.cmake  UnigineVersion.cmake
UnigineEditorPlugin_PrototypeStoneGenerator/cmake/modules/: FindEditor.cmake
UnigineEditorPlugin_PrototypeStoneGenerator/src/: AsyncRunGenerator.cpp  AsyncRunGenerator.h  DialogConfigurator.cpp  DialogConfigurator.h  ISignalGun.h  StoneGenerator.cpp  StoneGenerator.h  TextureStoneGenerator.cpp  TextureStoneGenerator.h  UnigineEditor.h  UnigineEditorPlugin_PrototypeStoneGenerator.cpp  UnigineEditorPlugin_PrototypeStoneGenerator.h
include/: Unigine.h  UnigineAnimation.h  UnigineAnimation.xml  UnigineAnimationParameters.h  UnigineAsyncQueue.h  UnigineAsyncQueue.xml  UnigineBase.h  UnigineBiMap.h  UnigineCallback.h  UnigineCallback.xml  UnigineCamera.h  UnigineChecksum.h  UnigineComponentSystem.h  UnigineComponentSystem.xml  UnigineCompress.h  UnigineConfig.h  UnigineConfig.xml  UnigineConsole.h  UnigineConsole.xml  UnigineControls.h  UnigineControls.xml  UnigineCurve2d.h  UnigineCurve2d.xml  UnigineCustomSystemProxy.h  UnigineCustomSystemProxy.xml  UnigineDecals.h  UnigineDecals.xml  UnigineDir.h  UnigineDisplays.h  UnigineEditor.h  UnigineEditor.xml  UnigineEllipsoid.h  UnigineEngine.h  UnigineEngine.xml  UnigineEvent.h  UnigineExport.h  UnigineExport.xml  UnigineFactory.h  UnigineFfp.h  UnigineFields.h  (+195 more)
include/editor/: UnigineActions.h  UnigineAssetDialogs.h  UnigineAssetImportParameters.h  UnigineAssetManager.h  UnigineCollection.h  UnigineConstants.h  UnigineEditorGlobal.h  UnigineEngineGuiWindow.h  UnigineObjectMode.h  UniginePlugin.h  UniginePluginInfo.h  UniginePluginManager.h  UnigineRenderWindow.h  UnigineSelection.h  UnigineSelector.h  UnigineShortcutManager.h  UnigineUndo.h  UnigineViewportManager.h  UnigineWindowManager.h
libpm/: __init__.py  command_build.py  command_copyrights_check.py  command_pack_plugin.py  command_py_check.py  command_update_binaries_sdk.py  pm_config.py  utils_bin_sdk.py  utils_files.py  utils_shell.py
libpm/data/: pycodestyle.config
misc/: perpendicular.py  read_mesh.cpp
source/plugins/Sea5kg/StoneGenerator_editorplugin/: .gitignore  CMakeLists.txt  Sea5kgStoneGenerator_editorplugin.json.in  wsjcpp.yml
source/plugins/Sea5kg/StoneGenerator_editorplugin/cmake/modules/: FindEditor.cmake  FindEngine.cmake
source/plugins/Sea5kg/StoneGenerator_editorplugin/res/: 001_cube.js  004_hourse.js  005_crystal.js  006_piramide.js  007_hat.js  008_cascet_tape.js
source/plugins/Sea5kg/StoneGenerator_editorplugin/src/: AsyncRunGenerator.cpp  AsyncRunGenerator.h  DialogConfigurator.cpp  DialogConfigurator.h  DialogConfiguratorComboBox.cpp  DialogConfiguratorComboBox.h  DialogConfiguratorParameterEditBoxUInt.cpp  DialogConfiguratorParameterEditBoxUInt.h  DialogConfiguratorParameterSliderFloat.cpp  DialogConfiguratorParameterSliderFloat.h  DialogConfiguratorParameterSliderInt.cpp  DialogConfiguratorParameterSliderInt.h  IDialogConfigurator.h  ISignalGun.h  Sea5kgStoneGenerator_editorplugin.cpp  Sea5kgStoneGenerator_editorplugin.h  StoneGenerator.cpp  StoneGenerator.h  StoneGeneratorBasicGeometries.cpp  StoneGeneratorBasicGeometries.h  StoneGeneratorBasicGeometry.cpp  StoneGeneratorBasicGeometry.h  StoneGeneratorBasicGeometryCube.cpp  StoneGeneratorBasicGeometryCube.h  StoneGeneratorBasicGeometryJsScript.cpp  StoneGeneratorBasicGeometryJsScript.h  StoneGeneratorBasicGeometryPlane.cpp  StoneGeneratorBasicGeometryPlane.h  StoneGeneratorBasicGeometrySphere.cpp  StoneGeneratorBasicGeometrySphere.h  StoneGeneratorConfig.cpp  StoneGeneratorConfig.h  StoneGeneratorDataComponent.cpp  StoneGeneratorDataComponent.h  StoneGeneratorModel.cpp  StoneGeneratorModel.h  StoneGeneratorPoint.cpp  StoneGeneratorPoint.h  StoneGeneratorPseudoRandom.cpp  StoneGeneratorPseudoRandom.h  (+7 more)
source/plugins/Sea5kg/StoneGenerator_editorplugin/src.wsjcpp/: CMakeLists.txt
utils/upgrade/: upgrade.usc
utils/upgrade/2.10.0.0/: materials.h  meta.h  process.h  render.xml  upgrade.usc  utils.h
utils/upgrade/2.11.0.0/: material.h  materials.h  process.h  projections.h  upgrade.usc  worlds_nodes.h
utils/upgrade/2.12.0.0/: fbx_reader.h  process.h  property.h  render.xml  upgrade.usc  utils.h
utils/upgrade/2.12.0.1/: fbx_reader.h  log.h  process.h  render.xml  upgrade.usc
utils/upgrade/2.12.0.2/: config.h  process.h  properties.h  render.xml  upgrade.usc
utils/upgrade/2.13.0.0/: process.h  render.xml  syncker.h  upgrade.usc
utils/upgrade/2.14.0.0/: materials.h  process.h  upgrade.usc  utils.h
utils/upgrade/2.14.1.0/: config.h  materials.h  process.h  upgrade.usc  utils.h
utils/upgrade/2.15.0.0/: landscape.h  process.h  upgrade.usc
utils/upgrade/2.15.0.1/: material.h  materials.h  process.h  sandworm.h  upgrade.usc  utils.h  worlds_nodes.h
utils/upgrade/2.15.1.0/: log.h  mat_graph.json  process.h  render.xml  upgrade.usc
utils/upgrade/2.16.0.0/: meta.h  process.h  upgrade.usc  utils.h
utils/upgrade/2.16.0.1/: material.h  material_graph.h  materials.h  process.h  property.h  upgrade.usc
utils/upgrade/2.16.0.2/: config.h  material_graph.h  process.h  render.xml  upgrade.usc  worlds_nodes.h
utils/upgrade/2.16.1.0/: editor_hotkey_preset.h  materials.h  process.h  projections.h  properties.h  render.xml  syncker.h  upgrade.usc  utils.h
utils/upgrade/2.17.0.0/: editor_hotkey_preset.h  material_graph.h  materials.h  meta.h  process.h  (+2 more)
(+191 files in other folders)
